--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   },
   "homepage": "https://github.com/VINAYIKA-saini/Project-5-Group-48#readme",
   "dependencies": {
+    "aws-sdk": "^2.1231.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
+    
   }
 }
